--- a/pom.xml
+++ b/pom.xml
@@ -15,4 +15,9 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <server>
+<id>deployment</id>
+<username>deployment</username>
+<password>welcome</password>
+</server>
 </project>
